[package]
name = "envoy-mobile-sys"
build = "build.rs"
version = "0.1.0"
authors = ["Cerek Hillen <cerekh@gmail.com>"]
edition = "2018"
description = "A syscrate for envoy-mobile"
license-file = "LICENSE"
homepage = "https://github.com/crockeo/envoy-mobile-sys"
repository = "https://github.com/crockeo/envoy-mobile-sys"

[build-dependencies]
bindgen = "0.56.0"
