[package]
name = "envoy-mobile-sys"
build = "build.rs"
version = "0.1.1"
authors = ["Cerek Hillen <cerekh@gmail.com>"]
edition = "2018"
description = "A syscrate for envoy-mobile"
license = "Apache-2.0"
homepage = "https://github.com/crockeo/envoy-mobile-sys"
repository = "https://github.com/crockeo/envoy-mobile-sys"

[build-dependencies]
bindgen = "0.56.0"
