[package]
name = "envoy-mobile-sys"
build = "build.rs"
version = "0.1.3"
authors = ["Cerek Hillen <cerekh@gmail.com>"]
edition = "2018"
description = "A syscrate for envoy-mobile"
license = "Apache-2.0"
homepage = "https://github.com/crockeo/envoy-mobile-sys"
repository = "https://github.com/crockeo/envoy-mobile-sys"
links = "envoy_mobile"

[build-dependencies]
bindgen = "0.56.0"
